# parkbench

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml
autoloop/: HANDOFF.md  LOCAL_DRIVER_PROMPT.md  ROUTINE_PROMPT.md  backlog.md  log.md
docs/: 00-vision.md  01-v1-scope.md  02-decisions.md  03-roadmap.md  04-open-questions.md  05-glossary.md  06-v1-architecture.md  07-multi-ride.md  08-theming.md  09-byo-protocol.md  10-autoloop.md  11-visual-world.md  12-validity.md  13-external-validity-plan.md  README.md  reference-survey-2026.md
src/parkbench/: __init__.py  axis.py  career.py  cli.py  client.py  dotenv.py  engine.py  export.py  nudge.py  profiles_server.py  protocol.py  radar.py  rides.py  runlog.py  scenario.py  scoring.py  server.py  suite.py  theme.py  validity.py
suites/: v1_negotiation.json
tests/: test_career.py  test_coding.py  test_commons.py  test_determinism.py  test_dotenv.py  test_economic.py  test_engine.py  test_exchange.py  test_export.py  test_export_profiles.py  test_identity.py  test_llm_agent.py  test_nudge.py  test_personas.py  test_radar.py  test_rides.py  test_safety.py  test_scenario.py  test_scoring.py  test_serve_profiles.py  test_server.py  test_theme.py  test_validity.py  test_versioning.py
viewer/: README.md  index.html  park.html  profiles.html  sample-career.json  sample-leaderboard.json  sample-radar.json  sample-run.json
web/: README.md  index.html  package-lock.json  package.json
web/src/: buildings.js  gymrun.js  halloffame.js  lands.js  main.js  pixels.js  props.js  radar.js  theme.js  trainer.js  (+1 more)
(+41 files in other folders)
